--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -5,16 +5,18 @@
 <table>
   <thead>
     <tr>
+      <th>Profile</th>
       <th>Name</th>
       <th>Owner</th>
       <th>Sniffed butts</th>
-      <th colspan="2"></th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @dogs.each do |dog| %>
       <tr>
+        <td> <%= profile_photo(dog) %></td>
         <td><%= link_to dog.name, dog %></td>
         <td><%= dog.owner %></td>
         <td><%= dog.sniffed_butts %></td>
